--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,6 @@
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
- 
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
@@ -19,17 +18,26 @@
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
         .then(() => console.log('service worker installed'))
-        .catch(err => console.error('Error', err));
+        .catch(err => console.log('Error', err));
     }
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
-
+<style>
+.loading-image {
+display:block;
+margin: 0 auto;
+}
+</style>
 </head>
 <body>
 
   <!-- Ionic's root component and where the app will load -->
-  <ion-app></ion-app>
+  <ion-app><div style="margin-top:75%;"><img class="loading-image" src="assets/images/preloader.gif"></div></ion-app>
+
+
+<script src="assets/lib/aws-cognito-sdk.min.js"></script>
+<script src="assets/lib/amazon-cognito-identity.min.js"></script>
 
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
